第三版 不出意料应该是最终版本了，把原来的easymode改为了一个基类，基类下有子类Easy和Hard,同时新增tCard类，用于实现选中并跟随鼠标拖动塔的效果，增加了塔的多态，三种塔，继承于一个基类Tower，支持升级，支持拆除，敌人共四类，继承于一个基类Enemy，增加了背景音效子弹音效敌人死亡音效基地扣血音效失败成功音效，增加plist和hardplist两种配置波数文件，对敌人与防御塔生命值以及攻击能力进行参数设计，完善与美化图片和UI设计，完善并补充所有素材，增加了hard版地图，修正敌人行走时旋转方向可能不恰当的问题

--- a/chooselevelscene.ui
+++ b/chooselevelscene.ui
@@ -16,40 +16,51 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>430</y>
-     <width>251</width>
-     <height>81</height>
+     <x>540</x>
+     <y>530</y>
+     <width>201</width>
+     <height>101</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">border-image:url(:/images/chooseEasy.png)
+setStyleSheet(&quot;border:2px groove gray;border-radius:10px;padding:2px 4px;&quot;);</string>
+   </property>
    <property name="text">
-    <string>简单模式</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>570</y>
-     <width>251</width>
-     <height>81</height>
+     <x>540</x>
+     <y>650</y>
+     <width>201</width>
+     <height>101</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">border-image:url(:/images/chooseHard.png)
+setStyleSheet(&quot;border:2px groove gray;border-radius:10px;padding:2px 4px;&quot;);</string>
+   </property>
    <property name="text">
-    <string>困难模式</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>1080</x>
-     <y>620</y>
-     <width>201</width>
-     <height>151</height>
+     <x>1010</x>
+     <y>590</y>
+     <width>271</width>
+     <height>181</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">border-image:url(:/images/return.png)</string>
+   </property>
    <property name="text">
-    <string>返回主菜单</string>
+    <string/>
    </property>
   </widget>
  </widget>
