--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>997</width>
-    <height>790</height>
+    <width>1202</width>
+    <height>838</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,14 +17,14 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>500</x>
       <y>580</y>
       <width>271</width>
       <height>131</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">border-image:url(:/images/startbutton.png)</string>
+     <string notr="true">border-image:url(:/images/startgame.png)</string>
     </property>
     <property name="text">
      <string/>
@@ -36,7 +36,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>997</width>
+     <width>1202</width>
      <height>26</height>
     </rect>
    </property>
