--- a/resource.qrc
+++ b/resource.qrc
@@ -1,20 +1,67 @@
 <RCC>
     <qresource prefix="/">
-        <file>images/2.jpg</file>
-        <file>images/background1.png</file>
-        <file>images/startbutton.png</file>
-        <file>images/easymap.jpg</file>
-        <file>images/towerbase.png</file>
-        <file>images/normaltower.png</file>
-        <file>images/enemy.png</file>
-        <file>images/normalbullet.png</file>
+        <file>config/easyTowersPosition.plist</file>
         <file>config/Info.plist</file>
+        <file>images/boss.png</file>
+        <file>images/bullet1.png</file>
+        <file>images/bullet2.png</file>
+        <file>images/bullet3.png</file>
+        <file>images/enemy1.png</file>
+        <file>images/enemy2.png</file>
+        <file>images/enemy3.png</file>
+        <file>images/menu.jpg</file>
+        <file>images/tower1.png</file>
+        <file>images/tower2.png</file>
+        <file>images/tower3.png</file>
+        <file>config/hardTowersPosition.plist</file>
         <file>config/TowersPosition.plist</file>
-        <file>config/Waves.plist</file>
-        <file>music/8bitDungeonLevel.mp3</file>
+        <file>images/tower1xiao.png</file>
+        <file>images/tower2xiao.png</file>
+        <file>images/tower3xiao.png</file>
+        <file>music/bossEnemyDie.mp3</file>
+        <file>music/fireEnemyDie.mp3</file>
+        <file>music/hardmap.mp3</file>
+        <file>music/iceEnemyDie.mp3</file>
+        <file>music/life_lose.mp3</file>
+        <file>music/Lose.mp3</file>
+        <file>music/normalBullet.mp3</file>
+        <file>music/normalEnemyDie.mp3</file>
+        <file>music/tower_place.mp3</file>
+        <file>music/Win.mp3</file>
         <file>music/enemy_destroy.wav</file>
+        <file>music/8bitDungeonLevel.mp3</file>
         <file>music/laser_shoot.wav</file>
         <file>music/life_lose.wav</file>
         <file>music/tower_place.wav</file>
+        <file>music/easymap.mp3</file>
+        <file>images/victory.jpg</file>
+        <file>images/lose.jpg</file>
+        <file>images/chooselevelscene.jpg</file>
+        <file>images/life.png</file>
+        <file>images/lifebar.png</file>
+        <file>images/money.png</file>
+        <file>images/moneybar.png</file>
+        <file>images/wavebar.png</file>
+        <file>images/levelup.png</file>
+        <file>images/info_bar.png</file>
+        <file>images/leave.png</file>
+        <file>images/wave.png</file>
+        <file>music/breakdowntower.mp3</file>
+        <file>music/iceBullet.mp3</file>
+        <file>music/fireBullet.mp3</file>
+        <file>images/chooseEasy.png</file>
+        <file>images/chooseHard.png</file>
+        <file>images/startgame.png</file>
+        <file>images/return.png</file>
+        <file>images/dangao.png</file>
+        <file>music/chooselevelscene.mp3</file>
+        <file>music/mainwindow.mp3</file>
+        <file>images/easymap.jpg</file>
+        <file>images/hardmap.jpg</file>
+        <file>images/towerbase1.png</file>
+        <file>images/towerbase2.png</file>
+        <file>images/icon.jpg</file>
+        <file>config/Waves.plist</file>
+        <file>config/HardWaves.plist</file>
     </qresource>
 </RCC>
